hides scrollbar and fixes formatting for the blog page

--- a/blogoroddyv3/static/css/blogoroddyv3.css
+++ b/blogoroddyv3/static/css/blogoroddyv3.css
@@ -8,16 +8,14 @@
 }
 
 body {
-  /* display: grid; */
   margin: 0;
   padding: 0;
   max-width: 100vw;
 }
-/* @media screen and (max-width: 500px) {
-  main {
-    height: 100vh;
-  }
-} */
+
+body::-webkit-scrollbar {
+  display: none;
+}
 
 a {
   text-decoration: none;
